--- a/configuration.properties
+++ b/configuration.properties
@@ -9,3 +9,6 @@ HMCValidUsername=manager
 HMCValidPassword=Manager1!
 HMCWrongUsername=manager2
 HMCWrongPassword=manager1/
+
+HerokuappUrl=https://the-internet.herokuapp.com/
+WebUniversityUrl=https://webdriveruniversity.com/
